--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,9 +2,13 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
 COPY . .
 
-RUN pip install --no-cache-dir -r requirements.txt
+# Make sure the types directory is available
+RUN mkdir -p types
 
 EXPOSE 8501
 
